...
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{()->data.toArticle(context,data.id)}"
                    android:textColor="#858585"
                    android:textSize="15sp"
                    tools:text="文章(2)" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
...
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{()->data.toComments(context,data.id)}"
                    android:textColor="#858585"
                    android:textSize="15sp"
                    tools:text="评论(2)" />

                <TextView
                    android:id="@+id/tv_conllect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
...

                        <TextView
                            android:id="@+id/tv_simple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="简易复诊"
                            android:textColor="#121212"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_simple2"
...

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="下一步(下单)"
                    android:textColor="@color/white" />
            </FrameLayout>

        </LinearLayout>


...
