<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.doctor.sun.entity.AppointmentBuilder" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_marginStart="@dimen/dp_13"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="类型:"
                android:textColor="#363636"
                android:textSize="@dimen/font_15" />

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_26"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_blue_rect_stroke"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_default"
                    app:layout_widthPercent="50%">

                    <RadioButton
                        android:id="@+id/premium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_left_rect"
                        android:button="@null"
                        android:checked="@{data.type==1}"
                        android:gravity="center"
                        android:onCheckedChanged="@{(v,b)->data.setIsPremium(b)}"
                        android:text="@string/premium_product"
                        android:textColor="@color/text_color_white2" />


                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_default"
                    app:layout_widthPercent="50%">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_right_rect"
                        android:button="@null"
                        android:checked="@{data.type==2}"
                        android:gravity="center"
                        android:onCheckedChanged="@{(v,b)->data.setIsNormal(b)}"
                        android:text="@string/standard_product"
                        android:textColor="@color/text_color_white2" />

                </FrameLayout>
            </com.zhy.android.percent.support.PercentLinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_marginStart="@dimen/dp_13"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="时间:"
                android:textColor="#363636"
                android:textSize="@dimen/font_15"
                android:visibility="@{data.type==1}" />

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_26"
                android:layout_gravity="center"
                android:background="@drawable/shape_blue_rect_stroke"
                android:orientation="horizontal"
                android:visibility="@{data.type==1}">

                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_left_rect"
                    android:button="@null"
                    android:enabled="@{data.canDecrement()}"
                    android:gravity="center"
                    android:onClick="@{()->data.decrementDuration()}"
                    android:text="-"
                    android:textColor="@color/color_return_type"
                    android:textStyle="bold"
                    app:layout_widthPercent="25%" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/btn_two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/full_rect"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@{data.duration+&quot;分钟&quot;}"
                    android:textColor="@color/color_return_type"
                    app:layout_widthPercent="50%" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_right_rect"
                    android:enabled="@{data.canIncrement()}"
                    android:gravity="center"
                    android:onClick="@{()->data.incrementDuration()}"
                    android:text="+"
                    android:textColor="@color/color_return_type"
                    android:textStyle="bold"
                    app:layout_widthPercent="25%" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:textColor="#363636"
                android:textSize="@dimen/font_15"
                app:html='@{@string/description_money("咨询费:", data.money + "元")}' />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_63"
            android:background="#eff3f5"
            android:orientation="horizontal">


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <FrameLayout
                android:layout_width="@dimen/dp_283"
                android:layout_height="@dimen/dp_49"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_blue_rect">

                <!--会诊-->
                <TextView
                    android:id="@+id/tv_pick_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_default"
                    android:gravity="center"
                    android:onClick="@{()->data.pickDate(context)}"
                    android:text="确  定"
                    android:textColor="#fff"
                    android:textSize="@dimen/font_17" />
            </FrameLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</layout>