...
    <string name="title_file_detail">文件</string>
    <string name="title_hospital_detail">医院详情</string>
    <string name="title_me">我</string>
    <string name="title_pick_date">选择日期</string>
    <string name="title_pick_time">选择时间</string>
    <string name="title_manage_patient">患者管理</string>
    <string name="title_appoint_doctor">预约医生</string>
    <string name="title_add_prescription">处方详情</string>
    <string name="title_medicine_store">寄药小助手</string>
    <string name="title_customer_service">客服</string>
    <string name="title_advice_history">历史反馈</string>
    <string name="title_record_pool">病历库</string>
    <string name="title_follow_up">随访列表</string>
...
