<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="header"
            type="com.doctor.sun.ui.model.HeaderViewModel" />

        <variable
            name="handler"
            type="com.doctor.sun.ui.handler.LoginHandler" />

        <import type="com.doctor.sun.BuildConfig" />

    </data>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/change_server"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_254"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_154"
                android:layout_gravity="center"
                android:src="@drawable/ic_doctor_sun" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="@dimen/dp_283"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/dp_11"
            android:drawableStart="@drawable/ic_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:text="@={handler.phone}"
            android:textColor="#363636"
            android:textSize="@dimen/font_15" />

        <View
            android:layout_width="@dimen/dp_283"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="center_horizontal"
            android:background="@color/gray_d9" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="@dimen/dp_283"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:background="#00000000"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/dp_11"
            android:drawableStart="@drawable/ic_lock"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:onEditorAction="@{()->handler.loginAction(context,handler.phone,handler.password)}"
            android:text="@={handler.password}"
            android:textColor="#363636"
            android:textSize="@dimen/font_15" />

        <View
            android:layout_width="@dimen/dp_283"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_28"
            android:layout_marginRight="@dimen/dp_28"
            android:background="@color/gray_d9" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="@dimen/dp_283"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_28"
            android:layout_marginRight="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_11"
            android:gravity="end"
            android:onClick="@{()->handler.resetPassword(context)}"
            android:text="忘记密码?"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_15" />

        <FrameLayout
            android:layout_width="@dimen/dp_283"
            android:layout_height="@dimen/dp_49"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/shape_blue_rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_default"
                android:gravity="center"
                android:onClick="@{()->handler.login(context,handler.phone,handler.password)}"
                android:text="登    录"
                android:textColor="#fff"
                android:textSize="@dimen/font_17" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="@dimen/dp_283"
            android:layout_height="@dimen/dp_49"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/shape_grey_rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_default"
                android:gravity="center"
                android:onClick="@{()->handler.registerDoctor(context)}"
                android:text="注    册"
                android:textColor="@color/grey_77"
                android:textSize="@dimen/font_17" />
        </FrameLayout>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1" />-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="#c1cacf" />-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dp_55"-->
        <!--android:baselineAligned="false"-->
        <!--android:orientation="horizontal">-->

        <!--<FrameLayout-->
        <!--android:id="@+id/action_register_doctor"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="@dimen/dp_55"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/ripple_default"-->
        <!--android:onClick="@{()->handler.registerDoctor(context)}"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center"-->
        <!--android:drawableLeft="@drawable/ic_doctor"-->
        <!--android:drawablePadding="@dimen/dp_11"-->
        <!--android:gravity="center"-->
        <!--android:text="医生注册"-->
        <!--android:textColor="#363636"-->
        <!--android:textSize="@dimen/font_15" />-->
        <!--</FrameLayout>-->

        <!--<FrameLayout-->
        <!--android:id="@+id/action_register_patient"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="@dimen/dp_55"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/ripple_default"-->
        <!--android:onClick="@{()->handler.registerPatient(context)}"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center"-->
        <!--android:drawableLeft="@drawable/ic_patient"-->
        <!--android:drawablePadding="@dimen/dp_11"-->
        <!--android:gravity="center"-->
        <!--android:text="公众注册"-->
        <!--android:textColor="#363636"-->
        <!--android:textSize="@dimen/font_15" />-->
        <!--</FrameLayout>-->
        <!--</LinearLayout>-->

    </com.zhy.android.percent.support.PercentLinearLayout>
</layout>